fix : delete white-space : pre wrap in PostDetail.css

--- a/client-public/src/styles/postDetail.css
+++ b/client-public/src/styles/postDetail.css
@@ -38,7 +38,6 @@
   line-height: 1.8;
   margin-bottom: 3rem;
   font-size: 1.05rem;
-  white-space: pre-wrap;
 }
 
 .comments {
